# sqlitestudio

./: .gitattributes  ChangeLog.md  README.md
.github/workflows/: lin_release.yml  mac_release.yml  normalize_messages.yml  prepare_release.yml  tests.yml  update_messages.yml  win_release.yml
Letos/: CMakeLists.txt
Letos/cmake/: common.cmake  letos_sqlite3.cmake  plugins.cmake
Letos/core/: CMakeLists.txt  config_builder.h  letos.cpp  log.cpp  log.h  (+3 more)
Plugins/: CMakeLists.txt
Plugins/TipOfTheDay/: CMakeLists.txt  OfflineTips.md  TipOfTheDay.json  TipOfTheDay_global.h  tipoftheday.qrc  tipofthedayconfig.ui  tipofthedaydialog.cpp  tipofthedaydialog.h  tipofthedaydialog.ui  tipofthedayplugin.cpp  tipofthedayplugin.h
Plugins/TipOfTheDay/translations/: TipOfTheDay.ts  TipOfTheDay_af_ZA.ts  TipOfTheDay_ar_SA.ts  TipOfTheDay_be_BY.ts  TipOfTheDay_ca_ES.ts  TipOfTheDay_cs_CZ.ts  TipOfTheDay_da_DK.ts  TipOfTheDay_de_DE.ts  TipOfTheDay_el_GR.ts  TipOfTheDay_en_US.ts  TipOfTheDay_es_ES.ts  TipOfTheDay_fa_IR.ts  TipOfTheDay_fi_FI.ts  TipOfTheDay_fr_FR.ts  TipOfTheDay_he_IL.ts  TipOfTheDay_hu_HU.ts  TipOfTheDay_it_IT.ts  TipOfTheDay_ja_JP.ts  TipOfTheDay_kaa.ts  TipOfTheDay_ko_KR.ts  TipOfTheDay_nl_NL.ts  TipOfTheDay_no_NO.ts  TipOfTheDay_pl_PL.ts  TipOfTheDay_pt_BR.ts  TipOfTheDay_pt_PT.ts  TipOfTheDay_ro_RO.ts  TipOfTheDay_ru_RU.ts  TipOfTheDay_sk_SK.ts  TipOfTheDay_sr_SP.ts  TipOfTheDay_sv_SE.ts  TipOfTheDay_tr_TR.ts  TipOfTheDay_uk_UA.ts  TipOfTheDay_vi_VN.ts  TipOfTheDay_zh_CN.ts  TipOfTheDay_zh_TW.ts
scripts/: fix_crowdin_pr.sh  lang.tcl  version_from_source.sh
(+553 files in other folders)
